# High-School-Personal-AI-Tutor-Demo

./: .replit  README.md  main.py  pyproject.toml  replit.nix  requirements.txt
assets/: styles.css
genai/: document_processing.py  flash_ai.py  quiz_ai.py  rag_pipeline.py  tutor_ai.py
sections/: admin_dashboard_page.py  ai_tutor_page.py  attivita_page.py  diario_page.py  flashcards_page.py  home_page.py  quiz_page.py  user_usage_page.py
utils/: auth.py  db_connection.py  feedback_db.py  fsrs.py  models.py  spaced_repetition.py  token_tracker.py  usage_db.py
